--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,9 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Agdasima&display=swap" rel="stylesheet">
+  <title> 🤓 Tech Blog 🤓</title>
 </head>
 <body>
-  
+  <header>
+    <div class="company-logo"> <img class="logo" src="ingenious Technology Logo.png" alt="a colorful brain with curly braces around it"></img> </div>
+    <nav class="navbar">
+      <ul class="nav-items">
+        <li class="nav-item"><a href="#" class="nav-link">HOME</a> </li>
+        <li class="nav-item"><a href="#" class="nav-link">DASHBOARD</a> </li>
+        <li class="nav-item"><a href="#" class="nav-link">LOGOUT</a> </li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
