--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -21,7 +21,7 @@
     </ul>
   </nav>
   <header class="hero">
-    <h1 class="app-title"><a href="/dashboard">Control Panel </a></h1>
+    <h1 class="app-title"><a href="/dashboard"> Control Panel </a></h1>
   </header>
 
   <main class="col-auto">
@@ -29,7 +29,7 @@
   </main>
 
   <footer class="footer flex-row justify-center">
-    <a href="/dashboard/new">➕ New Post</a>
+    <a href="/dashboard/new">🤖 New Content</a>
   </footer>
 </body>
 
