--- a/views/singlepost.handlebars
+++ b/views/singlepost.handlebars
@@ -1,10 +1,56 @@
-{{>post-info post}}
+<div class="new-post">
+  <article class="card">
+    <div class="card-header flex-row justify-space-between">
+      
+      <h2>{{post.title}}</h2>
+      <div>
+        Posted by {{post.User.username}} 
+         {{format_date post.createdAt}}
+      </div>
+    </div>
 
-// when they are logged in
 
-{{#if loggedIn}}
+    <div class="card-body">
+      {{post.body}}
+    </div>
+  </article>
 
-<form class="comment-text">
+  {{#if post.Comments}}
+    <section class="card">
+      <div class="cardHeader">
+        <h3>Comments</h3>
+      </div>
 
-  
-</form>
+      <div class="cardBody">
+        {{#each post.Comments}}
+          <div>
+            <p>
+              {{body}}
+            </p>
+            <p>
+              &mdash; {{User.username}}, {{format_date createdAt}}
+            </p>
+          </div>
+        {{/each}}
+      </div>
+    </section>
+  {{/if}}
+
+  <form id="new-comment" class="card">
+    <div class="cardHeader">
+      <h3>Add New Comment</h3>
+    </div>
+
+    <div class="card-body">
+      <input type="hidden" name="post-id" value="{{post.id}}" />
+
+      <label class="form-label" for="comment-body">Comment</label>
+
+      <textarea name="comment-body" class="form-input"></textarea>
+
+      <button type="submit" class="btn">Submit</button>
+    </div>
+  </form>
+</div>
+
+<script src="/js/comment.js"></script>
