singlepost formatting errors fixed

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,14 +5,14 @@
   <div id="signup" role="content">
     <form id="signup-info" class="card-body">
       <div>
-        <label for="new-username">Username</label>
+        <label for="new-username">Your Username</label>
         <input type="text" id="new-username" />
       </div>
       <div>
         <label for="password">Password</label>
         <input type="password" id="password" />
       </div>
-      <button type="submit" id="signup-btn" class="btn" >SIGN-UP</button>
+      <button type="submit" id="signup-btn" class="btn" >SIGNUP</button>
       <a href="/login">LOGIN</a>
     </form>
   </div>
