--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
   <header class="hero"> 
   
       <h2> Ingenious Tech Blog </h2>
-    <div class="logo"> <img src=".\css\stylesheet\Logo.jpg" alt="a colorful brain with curly braces around it">
+    <div class="logo"> <img src=".\css\stylesheet\Logo.png" alt="a colorful brain with curly braces around it">
   </header>
     <nav class="navbar">
       <ul class="nav justify-content-end">
