seed index created

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <div class="company-logo"> <img class="logo" src="ingenious Technology Logo.png" alt="a colorful brain with curly braces around it"></img> </div>
+    <div class="company-logo"> <img class="logo" src="Logo.png" alt="a colorful brain with curly braces around it"></img> </div>
     <nav class="navbar">
       {{#if loggedIn}}
       <ul class="nav-items">
@@ -31,21 +31,21 @@
   </main>
 </body>
 </html>
-
-<div>
+<script src="/js/comment.js"></script>
+{{!-- <div>
 <h2>Posts</h2>
 
 
-<ul>
+<ul> --}}
 
-{{#each userPosts}}
+{{!-- {{#each userPosts}}
 
 <li>Title: {{title}}</li>
 <li>Content: {{post_content}}</li>
 <li>User: {{user_id}}</li>
 
-{{/each}}
+{{/each}} --}}
 
-</ul>
+{{!-- </ul>
 
-</div>
+</div> --}}
