--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,17 +7,15 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Agdasima&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/jass.css">
+{{!-- <link rel="stylesheet" href="/css/jass.css"> --}}
   <link rel="stylesheet" href="/css/style.css">
   <title>🤓 Ingenious Tech Blog 🤓</title>
   
 </head>
-<body>
-  <header class="hero"> 
+<body class="flex-column justify-space-around">
   
-      <h2> Ingenious Tech Blog </h2>
-    <div class="logo"> <img src=".\css\stylesheet\Logo.png" alt="a colorful brain with curly braces around it">
-  </header>
+  
+    
     <nav class="navbar">
       <ul class="nav justify-content-end">
         <li class="nav-item"><a href="#" class="nav-link">HOME</a> </li>
@@ -32,10 +30,19 @@
       <button class="btn btn-secondary btn-sm" type="submit">LOGIN</button>
       {{/if}}
     </nav>
+
+    <header class="hero"> 
+        <h2> Ingenious Tech Blog </h2>
+  </header>
+  <div class="logo"> <img src=".\css\stylesheet\Logo.png" alt="a colorful brain with curly braces around it">
+    </div>
     </div>
   
-  
+  <main class="col-auto">
   {{{body}}}
+  </main>
+  <footer class="flex-row justify-center"> &copy; Ingenious Tech Admins </footer>
+
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
