--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,51 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Agdasima&display=swap" rel="stylesheet">
-  <title> 🤓 Ingenious Tech Blog 🤓</title>
-</head>
-<body>
-  <header>
-    <div class="company-logo"> <img class="logo" src="Logo.png" alt="a colorful brain with curly braces around it"></img> </div>
-    <nav class="navbar">
-      {{#if loggedIn}}
-      <ul class="nav-items">
-        <li class="nav-item"><a href="#" class="nav-link">HOME</a> </li>
-        <li class="nav-item"><a href="#" class="nav-link">DASHBOARD</a> </li>
-        <li class="nav-item"><a href="#" class="nav-link">LOGOUT</a> </li>
-      </ul>
-      <button id="LOGOUT" class="button is-danger">LOGOUT</button>
-      {{else}}
-      <a href="/" class="nav-items">HOMEPAGE</a>
-      <a href="/login" class="button is-primary">LOGIN</a>
-      {{/if}}
-    </nav>
-  </header>
-  <main>
-    {{{body}}}
-  </main>
-</body>
-</html>
-<script src="/js/comment.js"></script>
-{{!-- <div>
+<div>
 <h2>Posts</h2>
 
 
-<ul> --}}
+<ul>
 
-{{!-- {{#each userPosts}}
+{{#each posts}}
 
 <li>Title: {{title}}</li>
 <li>Content: {{post_content}}</li>
 <li>User: {{user_id}}</li>
 
-{{/each}} --}}
+{{/each}}
 
-{{!-- </ul>
+</ul>
 
-</div> --}}
+</div>
