--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <h2>🤓 Welcome BACK Ingenious Currator 🤓</h2>
   </div>
   <div id="signup" role="content">
-    <form id="signup-info" class="card-body">
+    <form id="signup-info" class="login-form card-body">
       <div>
         <label for="new-username">Username</label>
         <input type="text" id="new-username" />
@@ -12,8 +12,8 @@
         <label for="password">Password</label>
         <input type="password" id="password" />
       </div>
-      <button type="submit" id="signup-btn" class="btn1" >SIGN-UP</button>
-      <a href="/login">LOGIN</a>
+      <button type="submit" id="signup-btn" class="btn1" >LOGIN</button>
+      <a href="/sign-up">SIGN-UP</a>
     </form>
   </div>
 </div>
