fixed homepage link

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <div class="form">
   <div class="form-header">
-    <h2>🤓 Welcome BACK Ingenious Currator 🤓</h2>
+    <h2> Welcome BACK Ingenious Currator </h2>
   </div>
   <div id="signup" role="content">
     <form id="signup-info" class="login-form card-body">
@@ -12,8 +12,8 @@
         <label for="password">Password</label>
         <input type="password" id="password" />
       </div>
-      <button type="submit" id="signup-btn" class="btn1" >LOGIN</button>
-      <a href="/sign-up">SIGN-UP</a>
+      <button type="submit" id="login-btn" class="btn1" >LOGIN</button>
+      {{!-- <a href="/sign-up">SIGN-UP</a> --}}
     </form>
   </div>
 </div>
