--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,6 +1,6 @@
 <div class="form">
   <div class="form-header">
-    <h2>🤓 Welcome to the Ingenious Community 🤓</h2>
+    <h2> Welcome to the Ingenious Community </h2>
   </div>
   <div id="signup" role="content">
     <form id="signup-info" class="card-body">
@@ -13,7 +13,7 @@
         <input type="password" id="password" />
       </div>
       <button type="submit" id="signup-btn" class="btn" >SIGNUP</button>
-      <a href="/login">LOGIN</a>
+      {{!-- <a href="/login">LOGIN</a> --}}
     </form>
   </div>
 </div>
