--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,8 +18,8 @@
     
     <nav class="navbar">
       <ul class="nav justify-content-end">
-        <li class="nav-item"><a href="#" class="nav-link">HOME</a> </li>
-        <li class="nav-item"><a href="#" class="nav-link">DASHBOARD</a> </li>
+        <li class="nav-item"><a href="/" class="nav-link">HOME</a> </li>
+        <li class="nav-item"><a href="/dashboard" class="nav-link">DASHBOARD</a> </li>
 
       {{#if loggedIn}}
         <li class="nav-item"><a href="#" class="nav-link">LOGOUT</a> </li>
@@ -35,7 +35,7 @@
     <header class="hero"> 
         <h2> Ingenious Tech Blog </h2>
   </header>
-  <div class="logo"> <img src=".\css\stylesheet\Logo.png" alt="a colorful brain with curly braces around it">
+  <div class="logo"> <img src=".\css\stylesheet\Logo.png" alt="logo">
     </div>
     </div>
   
