attempts to correct styling issues

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,15 +5,15 @@
   <div id="signup" role="content">
     <form id="signup-info" class="login-form card-body">
       <div>
-        <label for="new-username">Username</label>
-        <input type="text" id="new-username" />
+        <label for="username-login">Username</label>
+        <input type="text" id="username-login" />
       </div>
       <div>
         <label for="password">Password</label>
         <input type="password" id="password" />
       </div>
       <button type="submit" id="login-btn" class="btn1" >LOGIN</button>
-      {{!-- <a href="/sign-up">SIGN-UP</a> --}}
+      <a href="/sign-up">SIGN-UP</a>
     </form>
   </div>
 </div>
