--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -25,7 +25,7 @@
   </header>
 
   <main class="col-auto">
-    {{{body}}}
+   <p>Hello World</p>
   </main>
 
   <footer class="footer flex-row justify-center">
